@@ -289,8 +289,18 @@ class NotebookTabLabel(Gtk.EventBox):
         self.label = Gtk.Label.new_with_mnemonic(name)
         self.connect('button-press-event', self._on_button_press_cb, 
                      notebook, child)
+
+        box = Gtk.Box()
+
+        if SETTINGS_VIEW.get_boolean('favicon'):
+            icon_pixbuf = child.webview.api.account.icon.get_pixbuf()
+            icon = Gtk.Image.new_from_pixbuf(icon_pixbuf)
+            box.pack_start(icon, True, True, 2)
+
+        box.pack_start(self.label, True, True, 0)
+
         self.set_visible_window(False)
-        self.add(self.label)
+        self.add(box)
         self.show_all()
 
     def set_sensitive(self, status):
